# project-llm-rag-guardrails-edu

./: .gitignore  README.md  guardrails-llm-deployment.code-workspace
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml
guardrails-llm-deployment/: .gitignore  README.md  pyproject.toml
guardrails-llm-deployment/data/: course_docs.jsonl  eval_cases.jsonl  python_course_docs.jsonl
guardrails-llm-deployment/docs/: corpus_contract.md  project_plan.md  workshop2_demo.md  workshop2_rag_slides.html  workshop2_requirements.md  workshop2_slides.html
guardrails-llm-deployment/reports/: baseline_langchain_results.csv  baseline_vector_results.csv  guardrailed_langchain_results.csv  guardrailed_vector_results.csv  python_course_rag_demo.html
guardrails-llm-deployment/scripts/: run_workshop2_demo.sh
guardrails-llm-deployment/src/guardrails_llm/: __init__.py  baseline_pipeline.py  cli.py  corpus.py  course_corpus.py  evaluation.py  guards.py  langchain_rag.py  pipeline.py  retrieval.py  vector.py  visualization.py
guardrails-llm-deployment/tests/: test_corpus.py  test_course_corpus.py  test_guards.py  test_pipeline.py  test_vector.py
scripts/: run_workshop2_demo.sh
