[project]
name = "guardrails-llm-deployment"
version = "0.1.0"
description = "Prototype for evaluating guardrails in LLM learning-assistant deployment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "guardrails_llm"

[project.scripts]
guardrails-llm = "guardrails_llm.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
